--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
             .btn-signin.jsx-562014102 {
                 font-size: 0.85rem;
-                background: #ef0034;
+                background: #34495e;
                 color: #fff;
                 text-transform: uppercase;
             }
@@ -199,7 +199,7 @@
             height: 60vw;
             min-height: 500px;
             max-height: 550px;
-            background: linear-gradient(to bottom, rgba(20, 18, 19, 0.5) 0%, rgba(20, 18, 19, 0.6) 90%, rgba(20, 18, 19, 1) 100%), url('https://cdn.gamingmonk.com/home-page/banner-d.jpg');
+            background: linear-gradient(to bottom, rgba(20, 18, 19, 0.5) 0%, rgba(20, 18, 19, 0.6) 90%, rgba(20, 18, 19, 1) 100%), url('https://i.imgur.com/ibIej7D.jpg');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -347,11 +347,11 @@
 
         .color-box.jsx-3664901464 {
             position: absolute;
-            height: 140px;
+            height: 190px;
             bottom: 0;
             width: 100%;
             border-radius: 10px;
-            background: linear-gradient(to bottom, rgba(44, 62, 80, 0.9) 0%, rgba(189, 195, 199, 0.9) 100%), url(https://cdn.gamingmonk.com/home-page/games/pubg-mobile.png);
+            background: linear-gradient(to bottom, rgba(44, 62, 80, 0.9) 0%, rgba(189, 195, 199, 0.9) 100%);
             background-size: cover;
         }
 
@@ -372,7 +372,7 @@
             }
 
             .color-box.jsx-3664901464 {
-                height: 180px;
+                height: 250px;
             }
 
             .game-img.jsx-3664901464 {
