--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
             .btn-signin.jsx-562014102 {
                 font-size: 0.85rem;
-                background: #34495e;
+                background: #71DB77;
                 color: #fff;
                 text-transform: uppercase;
             }
