--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
     <style id="__jsx-3496227845">
         .menu-options.jsx-3496227845 {
             color: #949494;
-            background: #fafafa;
+            background: #fff;
             height: 100%;
         }
 
@@ -820,7 +820,7 @@
     </style>
     <style id="__jsx-3718240701">
         .feature.jsx-3718240701 {
-            background: #fafafa;
+            background: #fff;
         }
 
         .feature-heading.jsx-3718240701 {
@@ -941,7 +941,7 @@
     <style id="__jsx-3835746249">
         .games-section.jsx-3835746249,
         .app-download-section.jsx-3835746249 {
-            background: #fafafa;
+            background: #fff;
         }
 
         .games-section-title.jsx-3835746249 {
