--- a/public/index.html
+++ b/public/index.html
@@ -335,7 +335,8 @@
         }
 
         .game-img.jsx-3664901464 {
-            height: 140px;
+            height: 100px;
+            width: 160px;
             position: absolute;
             left: 50%;
             -webkit-transform: translateX(-50%);
@@ -375,10 +376,7 @@
                 height: 250px;
             }
 
-            .game-img.jsx-3664901464 {
-                height: 180px;
-                bottom: 50px;
-            }
+            .game-img.jsx-3664901464 {}
 
             .game-name.jsx-3664901464 {
                 font-size: 0.9rem;
