--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#262626">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta property="fb:pages" content="720180274703529">
+    <meta property="og:url" content="website">
+    <meta property="og:title" content="Gameplex App">
+    <meta property="og:description"
+        content="Gameplex is one of the leading gaming companies in India which organizes esports tournaments for the gamers.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="" href="./favicon-32x32.png" />
     <meta property="fb:app_id" content="749818068418062">
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
